--- a/src/Login.form
+++ b/src/Login.form
@@ -34,6 +34,9 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="user_txt">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="99" red="99" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Username or Email"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Text Cursor"/>
@@ -72,6 +75,9 @@
     </Component>
     <Component class="javax.swing.JPasswordField" name="pwd_txt">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="99" green="99" red="99" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Password"/>
         <Property name="echoChar" type="char" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="(char)0" type="code"/>
