--- a/src/Main.form
+++ b/src/Main.form
@@ -109,12 +109,7 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel1">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\informatics\Documents\GIT\Inthanin_Project\src\image\Untitled-1.png"/>
-            </Property>
-          </Properties>
+        <Component class="javax.swing.JLabel" name="picture_label">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="20" y="0" width="-1" height="-1"/>
